# dll

./: .gitignore  .gitmodules  CLAUDE.local.md  CMakeLists.txt  CMakeSettings.json  CRASH_TRACKING_USAGE.md  Flarial.sln  Makefile  README.md  UpgradeLog.htm  add_includes.py  add_offset_include.py  auto-inject.bat  build.bat  build_fmt.bat  build_imgui.bat  build_output  build_output.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_times.txt  commit_hash.h  commit_hash.h.in  main.cpp  sum_build_times.bat  time_wrapper.bat
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  scripting_request.yml
.github/workflows/: build-latest.yml  build.yml
Flarial/: Flarial.cpp  Flarial.sln  Flarial.vcxproj  Flarial.vcxproj.filters
Flarial/Client/: Client.cpp  Client.h
Flarial/Client/Config/: Config.cpp  Config.h
Flarial/Client/FlarialGUI/: ClickGUIElements.cpp  ClickGUIElements.h  FlarialWidgets.cpp  FlarialWidgets.h
Flarial/Client/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
Flarial/Client/ImGui/Fonts/: Minecraft.h  ProductSans.h
Flarial/Client/ImGui/Notifications/: imgui_notify.h
Flarial/Client/Manager/: Manager.cpp  Manager.h
Flarial/Client/Manager/Hook/: Hook.h
Flarial/Client/Manager/Module/: Module.cpp  Module.h  Setting.h
Flarial/Client/Mem/: Mem.cpp  Mem.h
Flarial/Client/SDK/: Minecraft.cpp  Minecraft.h
Flarial/Client/SDK/Classes/: Actor.cpp  Actor.h  ClientInstance.h  GameMode.h  (+15 more)
Flarial/Client/Utils/: Logger.cpp  Logger.h  RenderUtils.cpp  RenderUtils.h  Signatures.h  Utils.cpp  Utils.h
Flarial/Flarial/: Flarial.cpp  Flarial.vcxproj  Flarial.vcxproj.filters
lib/: asio.hpp  crow.h
lib/HTTPRequest/: HTTPRequest.hpp
lib/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_internal.h  imgui_widgets.cpp  stb.h  stb_image_write.h
lib/curl/: zlib.lib
lib/flarial/include/: api.hpp  telemetry.hpp
lib/fmt/lib/: fmt.lib
lib/freetype/: CMakeLists.txt
lib/glm/: glm.cpp
lib/include/: MinHook.h  kiero.h
lib/kiero/: kiero.cpp  kiero.h
lib/lua/: CMakeLists.txt
lib/lua/lua-5.4.7/: CMakeLists.txt
lib/lua/lua-config-package-tests/: CMakeLists.txt
lib/opencv-d/: opencv_core4100d.lib  opencv_highgui4100d.lib  opencv_imgcodecs4100d.lib  opencv_imgproc4100d.lib  opencv_videoio4100d.lib  opencv_world4100d.lib
lua/: CMakeLists.txt
src/: PCH.hpp  PreInclude.hpp
src/Assets/: Assets.aps  Assets.hpp  Assets.rc  resource.h
src/Client/: Client.cpp  Client.cpp~  Client.h  Client.hpp  Client.hpp.bak
src/Client/Capes/: Cape.hpp  CapeManager.hpp
src/Client/Command/: Command.hpp  CommandManager.cpp  CommandManager.hpp
src/Client/Commands/: CommandManager.hpp  CommandService.hpp
src/Client/Cosmetic/: CosmeticManager.cpp  CosmeticManager.hpp  JsonModel.cpp  JsonModel.hpp  ModelLoader.cpp  ModelLoader.hpp  Texture.hpp
src/Client/Cosmetics/: CosmeticManager.hpp  JsonModel.cpp  JsonModel.hpp  ModelLoader.cpp  cosmetic.hpp
src/Client/Events/: Cancellable.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  Events.hpp  Listener.hpp
src/Client/GUI/: D2D.cpp  D2D.hpp  Data.hpp  GUIMouseListener.hpp  RenderUtils.hpp  Renderer.cpp
src/Client/Hook/: Manager.cpp  Manager.hpp
src/Client/Managers/: BaseManager.h
src/Client/Module/: Manager.cpp  Manager.hpp  ModuleRegistration.cpp
src/Config/: Settings.cpp  Settings.hpp
src/SDK/: SDK.cpp  SDK.hpp
src/SDK/Client/: PlayerSkin.hpp
src/Scripting/: CommandScript.hpp  FlarialScript.cpp  FlarialScript.hpp  LUAHelper.hpp  ModuleCommandScript.hpp  ModuleScript.cpp  ModuleScript.hpp  Script.cpp  Script.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptModuleBase.cpp  ScriptModuleBase.hpp  ScriptUtils.hpp  Scripting.cpp  Scripting.hpp
src/Scripting/Commands/: CommandBase.hpp  LuaOnCommand.hpp
src/Scripting/Console/: Console.hpp  ConsoleService.hpp
src/Scripting/EventManager/: ScriptEvents.hpp  ScriptingEventManager.cpp  ScriptingEventManager.hpp
src/Scripting/Functions/: Constraints.hpp  GUI.hpp  General.hpp  Inventory.hpp  LuaClient.hpp  LuaModule.hpp  LuaModuleManager.hpp  LuaOnCommand.hpp  OtherSettings.hpp  Player.hpp  Settings.hpp  Tessellator.hpp  mob_effects.hpp
src/Scripting/Mixins/: LuaMixin.hpp
src/Scripting/Packets/: LuaChangeDimensionPacket.hpp  LuaPlaySoundPacket.hpp  LuaSetTitlePacket.hpp  LuaTextPacket.hpp  Packets.hpp
src/Scripting/ScriptEvents/: ScriptEventManager.cpp  ScriptEventManager.hpp
src/Scripting/ScriptLibs/: AudioLib.hpp  ClientLib.hpp  ConstraintsLib.hpp  FSLib.hpp  FlarialGUILib.hpp  GUILib.hpp  GlobalsLib.hpp  ImGuiLib.hpp  NetworkLib.hpp  ObjectsLib.hpp  PacketsLib.hpp  PlayerLib.hpp  ScriptLib.cpp  ScriptLib.hpp  ServerLib.hpp  SettingsLib.hpp  StructsLib.hpp  UtilLib.hpp
src/Scripting/ScriptSettings/: ScriptSettingManager.cpp  ScriptSettingManager.hpp  ScriptSettingTypes.hpp
src/Utils/: APIUtils.cpp  APIUtils.hpp  Audio.cpp  Audio.hpp  CrashTelemetry.cpp  CrashTelemetry.hpp  Hive.hpp  Logger.cpp  MaterialResourceManager.hpp  Memory.hpp  ScriptUtils.cpp  ScriptUtils.hpp  Telemetry.cpp  Telemetry.hpp  UserActionLogger.cpp  UserActionLogger.hpp  Utils.cpp  Utils.hpp  VersionUtils.cpp  VersionUtils.hpp  WinrtUtils.cpp  WinrtUtils.hpp  path.hpp
src/Utils/Logger/: CrashTest.hpp  LightweightCrashTracker.cpp  LightweightCrashTracker.hpp  Logger.cpp  Logger.hpp  SymbolMapper.cpp  SymbolMapper.hpp  crashhandler.cpp  crashhandler.hpp  crashlogs.cpp  crashlogs.hpp
src/Utils/Memory/: LRUCache.hpp  Memory.hpp
src/Utils/Render/: DrawUtil3D.cpp  DrawUtil3D.hpp  DrawUtils.cpp  DrawUtils.hpp  MaterialUtils.cpp  MaterialUtils.hpp  PositionUtils.cpp  PositionUtils.hpp
src/Utils/Versions/: VersionUtils.cpp  VersionUtils.hpp  WinrtUtils.cpp  WinrtUtils.hpp
(+967 files in other folders)
